# Backend-Example

chat-test/: build.gradle
chat-test/src/main/java/com/pnu/chattest/: ChatTestApplication.java
chat-test/src/main/resources/: application.yml
chat-test/src/main/resources/static/: chat.html  index.html
chat-test/src/test/java/com/pnu/chattest/: ChatTestApplicationTests.java
geoscope-test/: Dockerfile  README.md  build.gradle  init-postgis.sql  settings.gradle
geoscope-test/src/main/java/com/pnu/geoscopetest/: GeoscopeTestApplication.java
geoscope-test/src/main/resources/: application.properties  application.yml
geoscope-test/src/test/java/com/pnu/geoscopetest/: GeoscopeTestApplicationTests.java
mongo-test/: .gitignore  build.gradle
mongo-test/src/main/java/com/pnu/mongotest/: MongoTestApplication.java
mongo-test/src/main/java/entity/: BaseEntity.java  User.java
mongo-test/src/main/resources/: application.yml
postgis-sqls/: .env  README.md  main.py  postgis_korea_epsg_towgs84.sql  pyproject.toml
postgis-sqls/sql/: create_hangjungdong_table.sql  create_pin_table.sql  create_sido_boundary_table.sql  create_sigungu_table.sql
postgis-sqls/src/: __init__.py
postgis-sqls/src/boundaryImporter/: __init__.py  data_processor.py  exceptions.py  geojson_loader.py  importer.py
postgis-sqls/src/sqlClient/: __init__.py  config.py  database.py  exceptions.py
spring-security-test/: build.gradle
spring-security-test/src/main/resources/: application.yml
spring-security-test/src/main/resources/sql/: init-data.sql  init-shema.sql
(+82 files in other folders)
